--- a/videosdk/src/main/res/layout/activity_live_session.xml
+++ b/videosdk/src/main/res/layout/activity_live_session.xml
@@ -41,8 +41,10 @@
         android:layout_height="@dimen/height_livestream_bar"
         android:layout_marginBottom="16dp"
         android:layout_marginRight="96dp"
+        android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/iv_add_friends"
+        app:layout_constraintStart_toStartOf="parent"
         tools:listitem="@layout/livestream_add_friend_viewholder" />
 
     <ImageView
