--- a/videosdk/src/main/res/layout/livestream_my_viewholder.xml
+++ b/videosdk/src/main/res/layout/livestream_my_viewholder.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/livestream_item">
 
@@ -14,9 +15,21 @@
         app:overlaySurface="true"
         android:visibility="visible"
         android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
+        android:layout_alignBottom="@+id/livestream_viewholder_name"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         style="@style/livestream_item"/>
+
+    <TextView
+        android:id="@+id/livestream_viewholder_name"
+        tools:text="Name"
+        android:background="@android:color/holo_green_dark"
+        android:textColor="@color/white"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
