--- a/videosdk/src/main/res/layout/livestream_my_viewholder.xml
+++ b/videosdk/src/main/res/layout/livestream_my_viewholder.xml
@@ -1,35 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.constraint.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/livestream_item">
-
-    <ImageView
-        android:src="@drawable/ic_videocam_white_36dp"
-        style="@style/livestream_item"
-        android:visibility="gone"/>
+    style="@style/livestream_item"
+    android:id="@+id/relativeLayout">
 
     <com.twilio.video.VideoView
         android:id="@+id/livestream_my_viewholder_videoview"
         app:overlaySurface="true"
         android:visibility="visible"
-        android:layout_alignParentTop="true"
-        android:layout_alignBottom="@+id/livestream_viewholder_name"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        style="@style/livestream_item"/>
+        style="@style/livestream_item"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/livestream_viewholder_name"
         tools:text="Name"
-        android:background="@android:color/holo_green_dark"
+        android:background="#70578300"
         android:textColor="@color/white"
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/livestream_holder_voice"
+        android:text="VOICE"
+        android:gravity="center"
+        android:background="#70000483"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="60dp"
+        android:layout_height="60dp"/>
+
+    <TextView
+        android:id="@+id/livestream_holder_video"
+        android:text="VIDEO"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:background="#70000483"
+        app:layout_constraintTop_toBottomOf="@+id/livestream_holder_voice"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="60dp"
+        android:layout_height="60dp"/>
+
+
+    <TextView
+        android:id="@+id/livestream_holder_swap"
+        android:text="SWAP"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:background="#70000483"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/livestream_holder_voice"
+        android:layout_width="60dp"
+        android:layout_height="60dp"/>
+
+</android.support.constraint.ConstraintLayout>
