--- a/videosdk/src/main/res/layout/layout_chat.xml
+++ b/videosdk/src/main/res/layout/layout_chat.xml
@@ -9,7 +9,7 @@
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:background="#CCCCCC"
+        android:background="#80000000"
         android:layout_width="match_parent"
         android:layout_height="40dp">
 
