--- a/videosdk/src/main/res/layout/layout_chat.xml
+++ b/videosdk/src/main/res/layout/layout_chat.xml
@@ -38,9 +38,10 @@
         <HorizontalScrollView
             android:id="@+id/layout_emoji"
             android:layout_width="wrap_content"
-            android:layout_height="38dp"
+            android:layout_height="match_parent"
             android:paddingLeft="4dp"
-            android:layout_marginTop="4dp"
+            android:paddingTop="5dp"
+            android:layout_gravity="center_vertical"
             android:scrollbars="none">
 
             <com.dabkick.videosdk.livesession.emoji.EmojiLayout
