--- a/videosdk/src/main/res/layout/item_videoview.xml
+++ b/videosdk/src/main/res/layout/item_videoview.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<com.devbrackets.android.exomedia.ui.widget.VideoView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_stage_videoview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:useDefaultControls="true"
     />
