--- a/videosdk/src/main/res/layout/activity_live_session.xml
+++ b/videosdk/src/main/res/layout/activity_live_session.xml
@@ -53,11 +53,9 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/height_livestream_bar"
         android:layout_marginBottom="16dp"
-        android:layout_marginRight="96dp"
-        android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/iv_add_friends"
-        app:layout_constraintStart_toStartOf="parent">
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview_livestream"
@@ -65,10 +63,8 @@
             android:layout_height="@dimen/height_livestream_bar"
             android:layout_marginBottom="16dp"
             android:layout_marginRight="96dp"
-            android:layout_marginStart="8dp"
+            android:paddingLeft="60dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/iv_add_friends"
-            app:layout_constraintStart_toStartOf="parent"
             tools:listitem="@layout/livestream_add_friend_viewholder" />
 
     </FrameLayout>
