--- a/videosdk/src/main/res/layout/chat_message.xml
+++ b/videosdk/src/main/res/layout/chat_message.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="0dp"
         android:textSize="17sp"
         tools:text="Chat Message"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chat_message_author"
         android:layout_marginLeft="@dimen/chat_msges_margin_left"/>
@@ -26,7 +26,7 @@
         android:textSize="12sp"
         android:layout_marginLeft="@dimen/chat_msges_margin_left"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         tools:text="Author name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
